# bmap-tools

./: .coveragerc  .gitignore  .travis.yml  BmapFlasher.py  CHANGELOG.md  MANIFEST.in  README  README.md  RELEASE_NOTES  TODO  __main__.py  bmap  bmap-creator  bmap-flasher  bmaptool  make_a_release.sh  mypy.ini  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  test.yml
bmaptools/: BmapCopy.py  BmapCreate.py  BmapCreator.py  BmapFlash.py  BmapFlasher.py  BmapHelpers.py  CLI.py  Fiemap.py  Filemap.py  TransRead.py  __main__.py
contrib/: bmap_write.py
debian/: bmap-tools.install  changelog  control  copyright  rules
docs/: README  README.md  RELEASE_NOTES
docs/man1/: bmaptool.1
packaging/: Makefile  bmap-tools.changes  bmap-tools.dsc  bmap-tools.spec
tests/: helpers.py  test_CLI.py  test_api_base.py  test_bmap_helpers.py  test_compat.py  test_fiemap.py  test_filemap.py  test_helpers.py
tests/oldcodebase/: BmapCopy1_0.py  BmapCopy2_0.py  BmapCopy2_1.py  BmapCopy2_2.py  BmapCopy2_3.py  BmapCopy2_4.py  BmapCopy2_5.py  BmapCopy2_6.py  BmapCopy3_0.py
tests/test-data/gnupg/: pubring.kbx  pubring.kbx~  random_seed  trustdb.gpg
tests/test-data/gnupg/openpgp-revocs.d/: 927FF9746434704C5774BE648D49DFB1163BDFB4.rev
tests/test-data/gnupg/private-keys-v1.d/: 6F4E440F8FDA066F62DBD7FE72FDD5E4F64B2C3B.key  CBE64D7E26AFF87DFDD758119B30F6F57B1B6D4D.key
tests/test-data/signatures/: test.image.bmap.v2.0.asc  test.image.bmap.v2.0.sig-by-wrong-key  test.image.bmap.v2.0.valid-sig
