[tool.poetry]
name = "bmaptools"
version = "3.6.0"
license = "GPL-2.0-only"
description = "BMAP tools"
authors = ["Artem Bityutskiy <dedekind1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16.0"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.poetry.scripts]
bmaptool = "bmaptools.CLI:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
