[tool.poetry]
name = "bmaptools"
version = "3.7.0"
license = "GPL-2.0-only"
description = "BMAP tools"
authors = ["Artem Bityutskiy <dedekind1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16.0"
gpg = "^1.10.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
nose = "^1.3.7"

[tool.poetry.scripts]
bmaptool = "bmaptools.CLI:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
